# DSPy_Multi-lingual_Optimizers

./: .gitignore  README.md  pyproject.toml
dspy_multi_lingual_optimizers/: __init__.py  mipro_optimizer.py  signature_translator.py
tests/: test.py
